smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/version_0_4_0/multiple-namespaces-per-file.smithy
$version: "0.4.0"
namespace com.foo
namespace com.baz

string MyString
