smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-unclosed-object5.smithy
// Syntax error at line 4, column 8: Expected COLON(':') but found IDENTIFIER('MyString') | Model
namespace com.foo
@foo(bar: "baz",
string MyString
